dora_ws/dora_robot_single/out/019bfa79-9149-7478-bdbf-d85349cadd65/log_state_machine.txt
  File "/home/dora/chemdemo/dora_ws/dora_robot_single/python_nodes/pick-place-rm65.py", line 20
    r_init_pose = [-3.947999954223633, 87.58499908447266, -64.58899688720703, 3.7909998893737793, -108.41699981689453, 88.95899963378906[-3.947999954223633, 87.58499908447266, -64.58899688720703, 3.7909998893737793, -108.41699981689453, 88.95899963378906, 100]
                  ^
SyntaxError: '[' was never closed
